# techscanner

./: .gitignore  README.md  pyproject.toml  requirements.txt  techscanner.py
src/: __init__.py  cve_lookup.py  detector.py  fingerprints.py
