[project]
name = "techscanner"
version = "1.1.0"
description = "Advanced Technology Detection Tool with CVE Vulnerability Scanning"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "nvdlib>=0.8.3",
    "trafilatura>=2.0.0",
]
